--- a/yamls/piwigo.yml
+++ b/yamls/piwigo.yml
@@ -15,12 +15,13 @@
 # CVE-2014-9115 2.7.2/2.6.4/2.5.5 http://osvdb.org/114581 http://seclists.org/fulldisclosure/2014/Nov/23 http://piwigo.org/forum/viewtopic.php?id=24850
 # CVE-2015-1441 2.7.3/2.6.5/2.5.6 http://piwigo.org/forum/viewtopic.php?id=25016
 # CVE-2015-1517 2.7.4 http://piwigo.org/releases/2.7.4
-# CVE-2015-XXXX 2.7.4 http://seclists.org/oss-sec/2015/q1/592
+# CVE-2015-2034 2.7.4
+# CVE-2015-2035 2.7.4
 Piwigo:
   1:
     location: ['/include/constants.php']
     secure_version: '2.7.4'
     regexp: ['define.*?PHPWG_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1517 http://piwigo.org/releases/2.7.4'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1517 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2034 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2035 http://piwigo.org/releases/2.7.4'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
