--- a/yamls/e107.yml
+++ b/yamls/e107.yml
@@ -51,16 +51,15 @@
 # CVE-2011-4921 1.0.0   http://osvdb.org/78050
 # CVE-2012-6433 1.0.2   http://osvdb.org/88862
 # CVE-2012-6434 1.0.3   http://osvdb.org/88908
-# CVE-2013-2750 TODO
-# CVE-2013-7305 TODO
-# CVE-2014-1846 TODO
-# CVE-2014-4734 TODO
-# CVE-2015-1041 TODO v.1.0.4 affected
+# CVE-2013-2750 1.0.3
+# CVE-2013-7305 fixed in http://sourceforge.net/p/e107/svn/13114 but there is no release fixing, which includes this patch
+# CVE-2014-4734 2.0 beta1
+# CVE-2015-1041 N/A v.1.0.4 affected
 e107:
   1:
     location: ['/e107_admin/ver.php']
-    secure_version: '1.0.3'
-    regexp: ['.*?e107_version.*?(?P<version>[.0-9]{2,})']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-6434 http://osvdb.org/88908'
+    secure_version: '1.0.5'
+    regexp: ['.*?e107_version.*?(?P<version>1\.[.0-9]{1,})']
+    cve: 'http://bugs.fi/articles/e107.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
