--- a/yamls/drupal.yml
+++ b/yamls/drupal.yml
@@ -31,12 +31,14 @@
 # https://drupal.org/SA-CORE-2014-005   CVE-2014-3704   7.31
 # https://drupal.org/SA-CORE-2014-006   CVE-2014-9015/CVE-2014-9016 7.34/6.34
 # https://drupal.org/SA-CORE-2015-001   CVE-2015-2559   7.35/6.35
+# https://drupal.org/SA-CORE-2015-001   CVE-2015-2749   7.35/6.35
+# https://drupal.org/SA-CORE-2015-001   CVE-2015-2750   7.35/6.35
 Drupal 7:
   1:
     location: ['/includes/bootstrap.inc']
     secure_version: '7.35'
     regexp: ['define.*?VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2559 https://drupal.org/SA-CORE-2015-001'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2559 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2749 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2750 https://drupal.org/SA-CORE-2015-001'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 Drupal 6:
@@ -44,6 +46,6 @@ Drupal 6:
     location: ['/CHANGELOG.txt']
     secure_version: '6.35'
     regexp: ['^Drupal (?P<version>[0-9.]+)']
-    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2559 https://drupal.org/SA-CORE-2015-001'
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2559 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2749 http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2750 https://drupal.org/SA-CORE-2015-001'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
