--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -45,6 +45,14 @@
 # OC-SA-2015-002    TODO            7.0.5/6.0.7/5.0.19
 # OC-SA-2015-003    TODO            7.0.5/6.0.7/5.0.19 Windows only
 # OC-SA-2015-004    TODO            7.0.5/6.0.7/5.0.19
+ownCloud 7:
+  1:
+    location: ['/owncloud/version.php']
+    secure_version: '7.0.5'
+    regexp: ['\$OC_VersionString.*?(?P<version>[0-9.]+)']
+    cve: 'https://owncloud.org/security/advisory/?id=oc-sa-2015-001 https://owncloud.org/security/advisory/?id=oc-sa-2015-002 https://owncloud.org/security/advisory/?id=oc-sa-2015-004'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
 ownCloud 6:
   1:
     location: ['/version.php']
