--- a/yamls/tikiwiki.yml
+++ b/yamls/tikiwiki.yml
@@ -16,6 +16,6 @@ TikiWiki:
     location: ['/lib/setup/twversion.class.php']
     secure_version: '8.4'
     regexp: ['.*?\$this->version.*?(?P<version>[0-9.]{1,})']
-    cve: CVE-2012-0911 http://osvdb.org/83534, CVE-2012-3996 http://osvdb.org/83533
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-0911 http://osvdb.org/83534 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2012-3996 http://osvdb.org/83533'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
