--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -1,5 +1,5 @@
 # CVE-2003-1598 "0.72 RC1" http://osvdb.org/4610 SA8954
-# CVE-2003-1599 "0.72 RC1" http://osvdb.org/4611 SA8954
+# CVE-2003-1599 "0.72 RC1" http://osvdb.org/4611 SA8954 0.70 affected
 # CVE-2004-1559 1.2.1
 # CVE-2004-1584 1.2.1
 # CVE-2005-1687 1.5.1
