--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -1,3 +1,5 @@
+# NOT-FOR-US: Site specific issue http://seclists.org/fulldisclosure/2015/Mar/34 http://seclists.org/fulldisclosure/2015/Mar/35
+# REJECTED: CVE-2013-1463
 # CVE-2012-3351 jw-player-plugin-for-wordpress TODO
 #
 WordPress plugin videowhisper-video-conference-integration:
@@ -47,5 +49,29 @@ WordPress plugin cart66-lite:
     secure_version: '1.5.4'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9442 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-9461'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin sp-client-document-manager:
+  1:
+    location: ['/wp-content/plugins/sp-client-document-manager/readme.txt']
+    secure_version: '2.5.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'TODO http://www.exploit-db.com/exploits/36576/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin floating-social-bar:
+  1:
+    location: ['/wp-content/plugins/floating-social-bar/readme.txt']
+    secure_version: '1.1.7'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://www.openwall.com/lists/oss-security/2015/04/11/9'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin citizen-space:
+  1:
+    location: ['/wp-content/plugins/citizen-space/readme.txt']
+    secure_version: '1.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'End-of-life http://seclists.org/fulldisclosure/2015/Apr/45'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
