--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -123,3 +123,11 @@ WordPress plugin feedwordpress:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-4018'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin zip-attachments:
+  1:
+    location: ['/wp-content/plugins/zip-attachments/readme.txt']
+    secure_version: '1.1.5'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://www.openwall.com/lists/oss-security/2015/06/12/4'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
