--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -131,3 +131,11 @@ WordPress plugin zip-attachments:
     cve: 'http://www.openwall.com/lists/oss-security/2015/06/12/4'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin revslider:
+  1:
+    location: ['/wp-content/plugins/revslider/revslider.php']
+    secure_version: '4.1.5'
+    regexp: ['\$revSliderVersion.*?(?P<version>[0-9.]+)']
+    cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1579 https://wpvulndb.com/vulnerabilities/7540 http://osvdb.org/109645'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
