--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -139,3 +139,11 @@ WordPress plugin revslider:
     cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-1579 https://wpvulndb.com/vulnerabilities/7540 http://osvdb.org/109645'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin nextend-facebook-connect:
+  1:
+    location: ['/wp-content/plugins/nextend-facebook-connect/readme.txt']
+    secure_version: '1.5.6'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-4413'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
