--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -147,3 +147,11 @@ WordPress plugin nextend-facebook-connect:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-4413'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin nextend-twitter-connect:
+  1:
+    location: ['/wp-content/plugins/nextend-twitter-connect/readme.txt']
+    secure_version: '1.5.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-4557'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
