Added support for WordPress plugin paypal-currency-converter-basic-for-woocommerce

--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -163,3 +163,11 @@ WordPress plugin broken-link-checker:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5057'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin paypal-currency-converter-basic-for-woocommerce:
+  1:
+    location: ['/wp-content/plugins/paypal-currency-converter-basic-for-woocommerce/readme.txt']
+    secure_version: '1.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5065'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
