--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -171,3 +171,11 @@ WordPress plugin paypal-currency-converter-basic-for-woocommerce:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5065'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin easy-social-icons:
+  1:
+    location: ['/wp-content/plugins/easy-social-icons/readme.txt']
+    secure_version: '1.2.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2084'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
