--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -220,3 +220,11 @@ WordPress plugin easy2map-photos:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=2015-4615 https://web.nvd.nist.gov/view/vuln/detail?vulnId=2015-4617'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin ibs-mappro:
+  1:
+    location: ['/wp-content/plugins/ibs-mappro/readme.txt']
+    secure_version: '1.0'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5472'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
