--- a/yamls/owncloud.yml
+++ b/yamls/owncloud.yml
@@ -43,7 +43,7 @@
 # oC-SA-2014-018    CVE-2014-4929   6.0.4/5.0.17
 # OC-SA-2015-001    CVE-2015-3011   7.0.5/6.0.7/5.0.19
 # OC-SA-2015-002    CVE-2015-3012   7.0.5/6.0.7/5.0.19
-# OC-SA-2015-003    TODO            7.0.5/6.0.7/5.0.19 Windows only
+# OC-SA-2015-003                    7.0.5/6.0.7/5.0.19 Windows only
 # OC-SA-2015-004    CVE-2015-3013   7.0.5/6.0.7/5.0.19
 ownCloud 7:
   1:
