--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -54,7 +54,7 @@ WordPress plugin sp-client-document-manager:
     location: ['/wp-content/plugins/sp-client-document-manager/readme.txt']
     secure_version: '2.5.4'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'TODO http://www.exploit-db.com/exploits/36576/'
+    cve: 'http://www.exploit-db.com/exploits/36576/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin floating-social-bar:
