--- a/yamls/zenphoto.yml
+++ b/yamls/zenphoto.yml
@@ -10,7 +10,7 @@
 # CVE-2012-0994 1.4.2.1 http://osvdb.org/78980 SA47875
 # CVE-2012-0995 1.4.2.1 http://osvdb.org/78981 http://osvdb.org/78982 SA47875
 # CVE-2012-2641 1.4.3   http://osvdb.org/83487 SA49787
-# CVE-2012-4519 1.4.3.3 http://osvdb.org/85899 SA50799 # TODO: Verify if fixed in this version
+# CVE-2012-4519 1.4.3.3 http://osvdb.org/85899 SA50799
 # CVE-2012-XXXX 1.4.3.4 87015 87016 87017 87018 87019 87020 87021 87022 87023 87024 87025 87026 87027 87028 87029 87030 87031 87032 87033 http://www.waraxe.us/content-96.html http://openwall.com/lists/oss-security/2013/07/10/19
 # CVE-2013-7241 1.4.5.4 http://osvdb.org/98092 http://www.zenphoto.org/news/zenphoto-1.4.5.4
 # CVE-2013-7242 1.4.5.4 http://osvdb.org/98091 http://www.zenphoto.org/news/zenphoto-1.4.5.4
