--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -234,3 +234,11 @@ WordPress plugin wp-ecommerce-shop-styling:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5468'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin buddypress-activity-plus:
+  1:
+    location: ['/wp-content/plugins/buddypress-activity-plus/readme.txt']
+    secure_version: '1.6.2'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://seclists.org/fulldisclosure/2015/Jul/72'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
