--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -242,3 +242,11 @@ WordPress plugin buddypress-activity-plus:
     cve: 'http://seclists.org/fulldisclosure/2015/Jul/72'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin subscribe-to-comments:
+  1:
+    location: ['/wp-content/plugins/subscribe-to-comments/readme.txt']
+    secure_version: '2.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://seclists.org/fulldisclosure/2015/Jul/71'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
