--- a/yamls/pmwiki.yml
+++ b/yamls/pmwiki.yml
@@ -6,7 +6,7 @@ PmWiki:
   1:
     location: ['/scripts/version.php']
     secure_version: '2.2.35'
-    regexp: ['.*?\$Version.*?pmwiki-(?P<version>[0-9.]+)']
+    regexp: ['.*?\$Version.*?pmwiki-(?P<version>[0-9.]+?[0-9]+)']
     cve: 'http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2011-4453 http://osvdb.org/77261'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
