--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -54,7 +54,7 @@ WordPress plugin sp-client-document-manager:
     location: ['/wp-content/plugins/sp-client-document-manager/readme.txt']
     secure_version: '2.5.4'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://www.exploit-db.com/exploits/36576/'
+    cve: 'http://www.exploit-db.com/exploits/36576/'  # CVE request http://www.openwall.com/lists/oss-security/2015/07/16/6
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
 WordPress plugin floating-social-bar:
@@ -255,6 +255,6 @@ WordPress plugin cp-contact-form-with-paypal:
     location: ['/wp-content/plugins/cp-contact-form-with-paypal/readme.txt']
     secure_version: '1.1.6'
     regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
-    cve: 'http://seclists.org/fulldisclosure/2015/Jul/49'
+    cve: 'http://seclists.org/fulldisclosure/2015/Jul/49'  # CVE request http://www.openwall.com/lists/oss-security/2015/07/11/2
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
