--- a/yamls/zenphoto.yml
+++ b/yamls/zenphoto.yml
@@ -16,12 +16,16 @@
 # CVE-2013-7242 1.4.5.4 http://osvdb.org/98091 http://www.zenphoto.org/news/zenphoto-1.4.5.4
 # CVE-2014-XXXX 1.4.5.9 http://www.zenphoto.org/news/zenphoto-1.4.5.9
 # CVE-2015-2948 1.4.8   http://www.zenphoto.org/news/zenphoto-1.4.8
-# CVE-2015-XXXX 1.4.9   http://www.zenphoto.org/news/zenphoto-1.4.9 CVE requested 2015-07-16 http://www.openwall.com/lists/oss-security/2015/07/16/5
+# CVE-2015-5591 1.4.9   http://www.zenphoto.org/news/zenphoto-1.4.9
+# CVE-2015-5592 1.4.9   http://www.zenphoto.org/news/zenphoto-1.4.9
+# CVE-2015-5593 1.4.9   http://www.zenphoto.org/news/zenphoto-1.4.9
+# CVE-2015-5594 1.4.9   http://www.zenphoto.org/news/zenphoto-1.4.9
+# CVE-2015-5595 1.4.9   http://www.zenphoto.org/news/zenphoto-1.4.9
 Zenphoto:
   1:
     location: ['/zp-core/version.php']
     secure_version: '1.4.9'
     regexp: ["define.*?ZENPHOTO_VERSION.*?(?P<version>[0-9.]+)"]
-    cve: 'http://www.zenphoto.org/news/zenphoto-1.4.9'
+    cve: 'http://www.zenphoto.org/news/zenphoto-1.4.9 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5591 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5592 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5593 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5594 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5595'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
