--- a/yamls/oscommerce.yml
+++ b/yamls/oscommerce.yml
@@ -4,7 +4,7 @@
 # OSVDB 112349 2.3.4    http://osvdb.org/show/osvdb/112349
 # OSVDB 112353 2.3.4    http://osvdb.org/show/osvdb/112353
 # OSVDB 112360 2.3.4    http://osvdb.org/show/osvdb/112360
-osCommerce (2.3):
+osCommerce 2.3:
   1:
     location: ['/includes/version.php']
     secure_version: '2.3.5'
@@ -12,7 +12,7 @@ osCommerce (2.3):
     cve: 'https://www.exploit-db.com/exploits/34582/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
-osCommerce (2.2):
+osCommerce 2.2:
   1:
     location: ['/admin/includes/application_top.php']
     secure_version: '2.3.5'
