--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -257,3 +257,11 @@ WordPress plugin cp-contact-form-with-paypal:
     cve: 'http://seclists.org/fulldisclosure/2015/Jul/49'  # CVE request http://www.openwall.com/lists/oss-security/2015/07/11/2
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin wp-slimstat:
+  1:
+    location: ['/wp-content/plugins/wp-slimstat/readme.txt']
+    secure_version: '4.1.6.1'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://www.openwall.com/lists/oss-security/2015/07/30/1'  # CVE request http://www.openwall.com/lists/oss-security/2015/07/30/1
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
