--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -265,3 +265,11 @@ WordPress plugin wp-slimstat:
     cve: 'http://www.openwall.com/lists/oss-security/2015/07/30/1'  # CVE request http://www.openwall.com/lists/oss-security/2015/07/30/1
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin the-holiday-calendar:
+  1:
+    location: ['/wp-content/plugins/the-holiday-calendar/readme.txt']
+    secure_version: '1.11.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'http://seclists.org/fulldisclosure/2015/Jul/125'  # contacted Pedreira to notify about CVE assigment. CVE request done by Pedreira 2015-07-20
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
