--- a/yamls/wordpress.yml
+++ b/yamls/wordpress.yml
@@ -139,18 +139,19 @@
 # CVE-2015-3429 4.2.2   https://wordpress.org/news/2015/05/wordpress-4-2-2/ https://www.netsparker.com/cve-2015-3429-dom-xss-vulnerability-in-twenty-fifteen-wordpress-theme/
 # CVE-2015-5622 4.2.3   https://wordpress.org/news/2015/07/wordpress-4-2-3/
 # CVE-2015-5623 4.2.3   https://wordpress.org/news/2015/07/wordpress-4-2-3/
+# CVE-2015-2213 4.2.4   https://wordpress.org/news/2015/08/wordpress-4-2-4/ https://wpvulndb.com/vulnerabilities/8126
 WordPress:
   1:
     location: ['/wp-includes/version.php', '/wp-includes/vars.php']
-    secure_version: '4.2.3'
+    secure_version: '4.2.4'
     regexp: ['\$wp_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2015/07/wordpress-4-2-3/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5622 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5623'
+    cve: 'https://wordpress.org/news/2015/08/wordpress-4-2-4/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2213'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
   2:
     location: ['/b2-include/b2vars.php']
-    secure_version: '4.2.3'
+    secure_version: '4.2.4'
     regexp: ['\$b2_version.*?(?P<version>[0-9.]+)']
-    cve: 'https://wordpress.org/news/2015/07/wordpress-4-2-3/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5622 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5623'
+    cve: 'https://wordpress.org/news/2015/08/wordpress-4-2-4/ https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2213'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
