--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -273,3 +273,11 @@ WordPress plugin the-holiday-calendar:
     cve: 'http://seclists.org/fulldisclosure/2015/Jul/125'  # contacted Pedreira to notify about CVE assigment. CVE request done by Pedreira 2015-07-20
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin newsletter:
+  1:
+    location: ['/wp-content/plugins/newsletter/plugin.php']
+    secure_version: '3.8.3'
+    regexp: ['define.*?NEWSLETTER_VERSION.*?(?P<version>[0-9.]+)']
+    cve: 'https://wpvulndb.com/vulnerabilities/7868'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
