--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -281,3 +281,11 @@ WordPress plugin newsletter:
     cve: 'https://wpvulndb.com/vulnerabilities/7868'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin gravity-forms:
+  1:
+    location: ['/wp-content/plugins/gravityforms/gravityforms.php']
+    secure_version: '1.9.7'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://wpvulndb.com/vulnerabilities/7917'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
