--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -289,3 +289,11 @@ WordPress plugin gravity-forms:
     cve: 'https://blog.sucuri.net/2015/04/security-advisory-xss-vulnerability-affecting-multiple-wordpress-plugins.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin usc-e-shop:
+  1:
+    location: ['/wp-content/plugins/usc-e-shop/readme.txt']
+    secure_version: '1.4.18'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2973'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
