--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -297,3 +297,11 @@ WordPress plugin usc-e-shop:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2973'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin mdc-private-message:
+  1:
+    location: ['/wp-content/plugins/mdc-private-message/readme.txt']
+    secure_version: '1.0.1'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://www.exploit-db.com/exploits/37907/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
