--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -305,3 +305,11 @@ WordPress plugin mdc-private-message:
     cve: 'https://www.exploit-db.com/exploits/37907/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin google-analyticator:
+  1:
+    location: ['/wp-content/plugins/google-analyticator/readme.txt']
+    secure_version: '6.4.9.6'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6238'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
