--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -313,3 +313,11 @@ WordPress plugin google-analyticator:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6238'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin dukapress:
+  1:
+    location: ['/wp-content/plugins/dukapress/readme.txt']
+    secure_version: '2.5.9.1'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'http://www.openwall.com/lists/oss-security/2015/08/22/2'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
