--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -321,3 +321,11 @@ WordPress plugin dukapress:
     cve: 'http://www.openwall.com/lists/oss-security/2015/08/22/2'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin youtube-embed:
+  1:
+    location: ['/wp-content/plugins/youtube-embed/readme.txt']
+    secure_version: '3.3.3'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6535'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
