--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -329,3 +329,11 @@ WordPress plugin youtube-embed:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6535'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin navis-documentcloud:
+  1:
+    location: ['/wp-content/plugins/navis-documentcloud/readme.txt']
+    secure_version: '0.1.1'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2807'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
