--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -337,3 +337,11 @@ WordPress plugin navis-documentcloud:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-2807'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin private-only:
+  1:
+    location: ['/wp-content/plugins/private-only/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5483 https://security.dxw.com/advisories/csrfxss-vulnerability-in-private-only-could-allow-an-attacker-to-do-almost-anything-an-admin-user-can/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
