--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -345,3 +345,11 @@ WordPress plugin private-only:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5483 https://security.dxw.com/advisories/csrfxss-vulnerability-in-private-only-could-allow-an-attacker-to-do-almost-anything-an-admin-user-can/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin watupro:
+  1:
+    location: ['/wp-content/plugins/watupro/readme.txt']
+    secure_version: '4.9.0.8'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'http://seclists.org/fulldisclosure/2015/Sep/8 http://seclists.org/fulldisclosure/2015/Sep/11'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
