--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -362,3 +362,19 @@ WordPress plugin job-manager:
     cve: 'https://wordpress.org/plugins/job-manager/changelog/'  # No CVE available
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin securemoz-security-audit:
+  1:
+    location: ['/wp-content/plugins/securemoz-security-audit/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6828'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
+WordPress plugin wp-limit-login-attempts:
+  1:
+    location: ['/wp-content/plugins/wp-limit-login-attempts/readme.txt']
+    secure_version: 'N/A'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6829'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
