--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -378,3 +378,11 @@ WordPress plugin wp-limit-login-attempts:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-6829'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin easy2map:
+  1:
+    location: ['/wp-content/plugins/easy2map/readme.txt']
+    secure_version: '1.3.0'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7668'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
