--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -394,3 +394,11 @@ WordPress plugin payment-form-for-paypal-pro:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7666'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin resads:
+  1:
+    location: ['/wp-content/plugins/resads/readme.txt']
+    secure_version: '1.0.2'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7667'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
