--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -402,3 +402,11 @@ WordPress plugin resads:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7667'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin simple-support-ticket-system:
+  1:
+    location: ['/wp-content/plugins/simple-support-ticket-system/readme.txt']
+    secure_version: '1.2.1'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7670'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
