--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -410,3 +410,11 @@ WordPress plugin simple-support-ticket-system:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7670'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin font:
+  1:
+    location: ['/wp-content/plugins/font/readme.txt']
+    secure_version: '7.5.1'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7683'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
