--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -418,3 +418,11 @@ WordPress plugin font:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7683'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin pie-register:
+  1:
+    location: ['/wp-content/plugins/pie-register/readme.txt']
+    secure_version: '2.0.19'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7377 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7682'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
