--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -426,3 +426,11 @@ WordPress plugin pie-register:
     cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7377 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-7682'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin events-made-easy:
+  1:
+    location: ['/wp-content/plugins/events-made-easy/readme.txt']
+    secure_version: '1.5.50'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'https://www.davidsopas.com/events-made-easy-wordpress-plugin-csrf-persistent-xss/'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
