--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -434,3 +434,11 @@ WordPress plugin events-made-easy:
     cve: 'https://www.davidsopas.com/events-made-easy-wordpress-plugin-csrf-persistent-xss/'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin powerpress:
+  1:
+    location: ['/wp-content/plugins/powerpress/readme.txt']
+    secure_version: '6.0.5'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'http://www.openwall.com/lists/oss-security/2015/10/27/1'  # CVE request 2015-10-27
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
