--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -442,3 +442,11 @@ WordPress plugin powerpress:
     cve: 'http://www.openwall.com/lists/oss-security/2015/10/27/1'  # CVE request 2015-10-27
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+WordPress plugin si-contact-form:
+  1:
+    location: ['/wp-content/plugins/si-contact-form/readme.txt']
+    secure_version: '4.0.38'
+    regexp: ['^Version.*?(?P<version>[0-9.]+)']
+    cve: 'http://www.openwall.com/lists/oss-security/2015/10/27/2'  # CVE request 2015-10-27
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
