--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -450,3 +450,13 @@ WordPress plugin si-contact-form:
     cve: 'http://www.openwall.com/lists/oss-security/2015/10/27/2'  # CVE request 2015-10-27
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
+# CVE-2015-5482 https://security.dxw.com/advisories/local-file-include-vulnerability-in-gd-bbpress-attachments-allows-attackers-to-include-arbitrary-php-files/
+# CVE-2015-5481 https://security.dxw.com/advisories/reflected-xss-in-gd-bbpress-attachments-allows-an-attacker-to-do-almost-anything-an-admin-can/
+WordPress plugin gd-bbpress-attachments:
+  1:
+    location: ['/wp-content/plugins/gd-bbpress-attachments/readme.txt']
+    secure_version: '2.3'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5481 https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2015-5482'
+    fingerprint: detect_general
+    post_processing: ['php5.fcgi']
