--- a/yamls/x-cart.yml
+++ b/yamls/x-cart.yml
@@ -1,4 +1,5 @@
 # URL: https://www.x-cart.com/
+# CVE-2015-XXXX 5.2.7 http://blog.curesec.com/article/blog/XCart-526-XSS-84.html
 # CVE-2015-XXXX 5.2.7 http://blog.curesec.com/article/blog/XCart-526-Path-Traversal-85.html
 # CVE-2015-XXXX 5.2.7 http://blog.curesec.com/article/blog/XCart-526-Code-Execution-86.html http://blog.curesec.com/article/blog/XCart-526-Code-Execution-Exploit-87.html
 X-Cart:
@@ -6,6 +7,6 @@ X-Cart:
     location: ['/Includes/install/install_settings.php']
     secure_version: '5.2.7'
     regexp: ['define.*?LC_VERSION.*?(?P<version>[0-9.]+)']
-    cve: 'http://blog.curesec.com/article/blog/XCart-526-Path-Traversal-85.html http://blog.curesec.com/article/blog/XCart-526-Code-Execution-86.html'
+    cve: 'http://blog.curesec.com/article/blog/XCart-526-XSS-84.html http://blog.curesec.com/article/blog/XCart-526-Path-Traversal-85.html http://blog.curesec.com/article/blog/XCart-526-Code-Execution-86.html'
     fingerprint: detect_general
     post_processing: ['php5.fcgi']
