--- a/yamls/wordpress-plugins.yml
+++ b/yamls/wordpress-plugins.yml
@@ -485,3 +485,11 @@ WordPress plugin users-ultra:
     cve: 'http://seclists.org/bugtraq/2015/Nov/93'
     fingerprint: detect_general
     post_processing: ['php6.fcgi']
+WordPress plugin cm-download-manager:
+  1:
+    location: ['/wp-content/plugins/cm-download-manager/readme.txt']
+    secure_version: '2.0.4'
+    regexp: ['Stable tag: (?P<version>[0-9.]{1,})']
+    cve: 'https://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2014-8877 https://github.com/nmap/nmap/pull/38'
+    fingerprint: detect_general
+    post_processing: ['php6.fcgi']
